Bug 166153 - LO 25.2.2.2, Writer, MouseOver HelpTip in Navigator too wide
Summary: LO 25.2.2.2, Writer, MouseOver HelpTip in Navigator too wide
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.2.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-12 13:11 UTC by thuja
Modified: 2025-04-30 13:43 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
MouseOver Linux (399.72 KB, image/jpeg)
2025-04-12 13:12 UTC, thuja
Details
MouseOver windows (352.98 KB, image/jpeg)
2025-04-12 13:12 UTC, thuja
Details

Note You need to log in before you can comment on or make changes to this bug.
Description thuja 2025-04-12 13:11:17 UTC
Description:
After installing LO 25.2 under Windows 10, the HelpTip in the Navigator is displayed too wide. Under Linux Mint, it is displayed as a small window as usual.

Steps to Reproduce:
1.Create a document with several headings.
2.For example, take heading 4 and create a large heading.
3.Move the mouse over the heading entry in the Navigator and examine the result.

Actual Results:
Under windows 10, the HelpTip is displayed as a wide banner across the entire width.

Expected Results:
The HelpTip should be displayed as a small window as before.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.2.2.2 (X86_64) / LibreOffice Community
Build ID: 7370d4be9e3cf6031a51beef54ff3bda878e3fac
CPU threads: 12; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded
Comment 1 thuja 2025-04-12 13:12:21 UTC
Created attachment 200320 [details]
MouseOver Linux
Comment 2 thuja 2025-04-12 13:12:39 UTC
Created attachment 200321 [details]
MouseOver windows
Comment 3 Harald Berger 2025-04-12 13:29:50 UTC
I confirm the error as described

Version: 25.2.2.2 (X86_64) / LibreOffice Community
Build ID: 7370d4be9e3cf6031a51beef54ff3bda878e3fac
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded
Comment 4 Karthik 2025-04-18 06:08:11 UTC
I tried fixing this
https://gerrit.libreoffice.org/c/core/+/184347

Can someone review this and let me know if I'm headed in the right direction.
Comment 5 thuja 2025-04-18 17:58:11 UTC
(In reply to Karthik from comment #4)
> I tried fixing this
> https://gerrit.libreoffice.org/c/core/+/184347
> 
> Can someone review this and let me know if I'm headed in the right direction.

I installed the DEV, but the HelpTip covers the whole screen.
At first I thought it was the German interface, but it is the same with the English language setting.
Comment 6 thuja 2025-04-18 18:04:49 UTC
(In reply to thuja from comment #5)
> (In reply to Karthik from comment #4)
> > I tried fixing this
> > https://gerrit.libreoffice.org/c/core/+/184347
> > 
> > Can someone review this and let me know if I'm headed in the right direction.
> 
> I installed the DEV, but the HelpTip covers the whole screen.
> At first I thought it was the German interface, but it is the same with the
> English language setting.

Use Win11 for testing
Comment 7 thuja 2025-04-18 18:33:01 UTC
Version: 25.2.4.0.0+ (X86_64) / LibreOffice Community
Build ID: 6413214cd5d617f64840b1a69a9ff1f2553024a8
CPU threads: 6; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL threaded
Comment 8 Karthik 2025-04-19 00:19:21 UTC
The same problem is present in both linux (X11) and Mac, the above patch fixes the problem in both. Unfortunately I can't test on windows, but will try to fix that as well.
Comment 9 Commit Notification 2025-04-28 14:32:34 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7ce5b485302802519068d5dd995e37a9f5d2ca47

tdf#166153 Fix width of HelpTip on mouseOver

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 thuja 2025-04-30 13:42:03 UTC
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f98d81f008e11fd2786597d82126a6287353c714
CPU threads: 6; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL threaded

Version fixed the problem.
Thank you for your efforts