tdf#166153 Fix width of HelpTip on mouseOver

Fix width being too large for mouse over HelpTips
in the navigator panel.

Change-Id: I84479cd825299e9fbd809ed917b88cb873ebd0ff
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184347
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Jenkins